feat: add auth
